--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
                         <source srcset="./images/header.png" type="images/png">
-                        <img class="home-image" src="./images/header.png" width="500" height="281" alt="Our logo">
+                        <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture>
                     <h1 class="title white-text">
                         Glorifying God by Developing Quality Mobile Apps and Websites!
@@ -118,7 +118,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle">
-                            We are a software development company that strives to glorify God through the creation and distribution of quality mobile apps and website design & development. 
+                            We are a web & mobile software development company that strives to glorify God through the creation and distribution of quality mobile apps and website design & development for small businesses, non-profit organizations, and individuals. 
                         </h4>
                         <h4 class="subtitle">
                             Our four core values are:
@@ -127,8 +127,8 @@
                             <ol class="ol">
                                 <li>Excellence in Everything</li>
                                 <li>Integrity and Honesty</li>
-                                <li>Christ Exalting</li>
-                                <li>Kingdom Focused</li>
+                                <li>Client Focused</li>
+                                <li>Accountability</li>
                             </ol>
                         </div>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
@@ -153,7 +153,7 @@
                             Mobile Apps
                         </h2>
                         <h4 class="subtitle">
-                            We offer mobile app development for small business and organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that solve problems, try to make life easier, and provide entertainment. These apps cover a wide range of genres including tech, church/ministry, health, and games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
+                            We offer mobile app development for small business and non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that solve problems, try to make life easier, and provide entertainment. These apps cover a wide range of genres including tech, church/ministry, health, and games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>About Mobile App Development</b>
