--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -116,14 +116,14 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps and website design & development. 
+                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps and website design & development for small businesses, non-profit organizations, and individuals. 
                 </h2><br><hr>
                 <h1 class="title">
                     Our Vision
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps and website design and development. We envision aiding organizations and individuals in accomplishing their goals through quality software development. 
+                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps and website design and development. We envision aiding small businesses,  non-profit organizations, and individuals in accomplishing their goals through quality web & mobile software development. 
                 </h2><br><hr>
                 <h1 class="title">
                     Our Values
@@ -142,7 +142,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Excellence in everything means we go out of our way to ensure that every app or piece of software is fully functional and provides a quality user experience. Excellence reflects our commitment to glorify Christ and to do all things in his name (Col. 3:17).
+                                    Excellence is when we demand more of ourselves than our clients do. Excellence in Everything means we go out of our way to ensure that every app or website developed is fully functional and provides a quality user experience. We will produce and deliver the best products and services we are capable of producing. 
                                 </div>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Integrity and honesty are two sides of the same coin. To have integrity is to be honest and have strong moral principles. Being honest with strong moral principles demonstrates our devotion to Christ and to act honorably in all things (Heb. 13:18).
+                                    Integrity and honesty are two sides of the same coin. To have integrity is to be honest and have strong moral principles. Integrity creates trust. When customers place their trust in us, it is because of our goal to maintain strong integrity and honesty. We will act in a trustworthy manner that earns the respect of our clients.
                                 </div>
                             </div>
                         </div>
@@ -165,12 +165,12 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    Christ Exalting
+                                    Client Focused
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    To exalt Christ in all things is the goal of every piece of software that we offer. This value drives our mission and vision so that Christ would be exalted and his name made great through the software we offer <br> (Phil. 2:9-10).
+                                    Our company exists to help small businesses, non-profit organizations, and individuals have access to quality made websites and mobile apps. We make every decision and measure every outcome based on how well it serves our clients. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
                                 </div>
                             </div>
                         </div>
@@ -179,12 +179,12 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    Kingdom Focused
+                                    Accountability
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    As our name implies, we are a kingdom focused company that seeks to help organizations and individuals through the creation of software. Seeking his kingdom and growing the kingdom is what we are all about (Matt. 6:33)!
+                                    Accountability is about staying true to our word. It means we do what we say we’re going to do. If something happens to prevent that, we determine the new course and communicate quickly. We believe that accepting responsibility for your actions (and inactions) is the ultimate way to build trust.
                                 </div>
                             </div>
                         </div>
