--- a/websites.html
+++ b/websites.html
@@ -117,7 +117,7 @@
                 </h2>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom website for your organization can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development service packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
+                    A custom website for your small business, non-profit organization, or personal website can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development service packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
                 </h2><br>
                 <h1 class="title">
                     Pricing
