--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality mobile apps and quality website design & development.
+                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality mobile apps and quality website design & development for small businesses, non-profit organizations, and individuals.
 
                     Our goal is to provide quality mobile apps and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store and our websites are hosted on a fast server with little to no downtime.
                 </h2><br>
