--- a/privacy.html
+++ b/privacy.html
@@ -116,7 +116,7 @@
                     Last updated: April 07, 2022
                 </h2>
                 <h2 class="subtitle privacy-h2">
-                    Part of being a software development company is to describe how we use information from users for the products and services we offer. As a software company that seeks to glorify God, we feel that this policy is important and necessary to stay true to our values. Kingdom Application Solutions LLC understands the need for user privacy as well as the safe use of collected data. The privacy policy below spells out in detail how your information is used for any product or service we offer.
+                    Part of being a web & mobile software development company is to describe how we use information from users for the products and services we offer. We believe that this policy is important and necessary to stay true to our values. Kingdom Application Solutions LLC understands the need for user privacy as well as the safe use of collected data. The privacy policy below spells out in detail how your information is used for any product or service we offer.
                 </h2>
                 <h2 class="subtitle privacy-h2">
                     This privacy policy describes the collection, use, protection, disclosure, correction, and deletion of your personal information by Kingdom Application Solutions LLC. Please take a moment to read the following to learn more about our information practices, including what type of information is gathered, how the information is used and for what purposes, to whom we disclose the information, and how we safeguard your personal information. Your privacy is a priority to us and we go to great lengths to protect it.
