--- a/products-services.html
+++ b/products-services.html
@@ -113,7 +113,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application development and website design and development for organizations and individuals. We also produce our own line of mobile apps deployed to the app stores. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
+                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application development and website design and development for small businesses, non-profit organizations and individuals. We also produce our own line of mobile apps deployed to the app stores. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column">
@@ -126,7 +126,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    We offer mobile app development for organizations and businesses that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring mobile app development to small businesses and organizations at an affordable price.
+                                    We offer mobile app development for small businesses and non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring mobile app development to your organization at an affordable price.
                                     
                                     Click the link to see more information about pricing for <u><a href="https://kingdomappsolutions.tech/apps.html">custom mobile app development</a></u>. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
                                 </div>
@@ -161,7 +161,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    We offer the design and development of custom websites for organizations and individuals. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
+                                    We offer the design and development of custom websites for small businesses,  non-profit organizations, and individuals. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
                                 </div>
                             </div>
                         </div>
