--- a/apps.html
+++ b/apps.html
@@ -129,7 +129,7 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-gears"></i>
-                                    App Starter Package
+                                    Starter Package
                                 </p>
                             </header>
                             <div class="card-content">
@@ -153,7 +153,7 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-star"></i>
-                                    App Basic Package
+                                    Basic Package
                                 </p>
                             </header>
                             <div class="card-content">
@@ -177,7 +177,7 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-briefcase"></i>
-                                    App Pro Package
+                                    Pro Package
                                 </p>
                             </header>
                             <div class="card-content">
@@ -213,7 +213,7 @@
                                 </p>
                             </header>
                             <div class="card-content">
-                                <div class="content">
+                                <div class="content justify">
                                     Simple Evangelism is an app that every follower of Jesus can use to lead people into a saving relationship with him. The app guides the user in a conversation with another through simple questions and a pleasant user interface. <br><br>
 
                                     Complete with common objections that people may offer, the app gives any Christian the confidence needed to share their faith. The app also offers a growth pathway for new believers that the user can follow to aid in initial discipleship efforts. <br><br>
@@ -248,7 +248,7 @@
                                 </p>
                             </header>
                             <div class="card-content">
-                                <div class="content">
+                                <div class="content justify">
                                     Memory Brain Game is a simple, Simon-like game that aids in building memory strength. The game initially has four levels of increasing difficulty. Tap the buttons that appear randomly every play to finish the level. <br><br>
 
                                     Plans are in the works to scale the game to bring more unique game play. Various levels of difficulty will be introduced giving a 2x2, 3x3, 4x4, 5x5, and 6x6 game experience. These updates will be released later to give the game a more challenging aspect. <br><br>
