--- a/products-services.html
+++ b/products-services.html
@@ -121,11 +121,11 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-mobile-screen"></i>
-                                    Mobile App Development
+                                    App Development
                                 </p>
                             </header>
                             <div class="card-content">
-                                <div class="content">
+                                <div class="content justify">
                                     We offer mobile app development for small businesses and non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring mobile app development to your organization at an affordable price.
                                     
                                     Click the link to see more information about pricing for <u><a href="https://kingdomappsolutions.tech/apps.html">custom mobile app development</a></u>. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
@@ -160,7 +160,7 @@
                                 </p>
                             </header>
                             <div class="card-content">
-                                <div class="content">
+                                <div class="content justify">
                                     We offer the design and development of custom websites for small businesses,  non-profit organizations, and individuals. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
                                 </div>
                             </div>
