--- a/websites.html
+++ b/websites.html
@@ -128,7 +128,7 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-laptop"></i>
-                                    CMS Website Development
+                                    CMS Development
                                 </p>
                             </header>
                             <div class="card-content">
@@ -147,7 +147,7 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-display"></i>
-                                    Custom Website Development
+                                    Custom Development
                                 </p>
                             </header>
                             <div class="card-content">
