--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                         <source srcset="./images/header.webp" type="images/webp">
                         <source srcset="./images/header.png" type="images/png">
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
-                    </picture>
+                    </picture><br>
                     <h1 class="title white-text">
                         Glorifying God by Developing Quality Mobile Apps and Websites!
-                    </h1><br>
+                    </h1>
                 </div>    
             </div>     
         </section>
@@ -117,7 +117,7 @@
                         <h2 class="subtitle privacy-h3">
                             Who We Are
                         </h2>
-                        <h4 class="subtitle">
+                        <h4 class="subtitle justify">
                             We are a web & mobile software development company that strives to glorify God through the creation and distribution of quality mobile apps and website design & development for small businesses, non-profit organizations, and individuals. 
                         </h4>
                         <h4 class="subtitle">
@@ -136,7 +136,11 @@
                         </a>
                     </div><br>
                     <div class="column">
-                        <img class="image-home" src="./images/about.webp" alt="Who we are" width="640" height="480">
+                        <picture>
+                            <source srcset="./images/about.webp" type="images/webp">
+                            <source srcset="./images/about.png" type="images/png">
+                            <img class="image-home" src="./images/about.webp" alt="Who we are" width="640" height="480">
+                        </picture>
                     </div>
                 </div>
             </div>
@@ -146,13 +150,17 @@
             <div class="hero-body">
                 <div class="columns is-centered">
                     <div class="column is-half">
-                        <img src="./images/apps.webp" alt="Mobile apps" width="640" height="480">
+                        <picture>
+                            <source srcset="./images/apps.webp" type="images/webp">
+                            <source srcset="./images/apps.png" type="images/png">
+                            <img src="./images/apps.webp" alt="Mobile apps" width="640" height="480">
+                        </picture>
                     </div>
                     <div class="column">
                         <h2 class="subtitle privacy-h3">
                             Mobile Apps
                         </h2>
-                        <h4 class="subtitle">
+                        <h4 class="subtitle justify">
                             We offer mobile app development for small business and non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that solve problems, try to make life easier, and provide entertainment. These apps cover a wide range of genres including tech, church/ministry, health, and games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
@@ -170,7 +178,7 @@
                         <h2 class="subtitle privacy-h3">
                             Website Development
                         </h2>
-                        <h4 class="subtitle">
+                        <h4 class="subtitle justify">
                             We offer the design and development of custom websites for anyone interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
@@ -178,7 +186,11 @@
                         </a>
                     </div><br>
                     <div class="column">
-                        <img class="image-home" src="./images/websites.webp" alt="Website development" width="640" height="480">
+                        <picture>
+                            <source srcset="./images/websites.webp" type="images/webp">
+                            <source srcset="./images/websites.png" type="images/png">
+                            <img class="image-home" src="./images/websites.webp" alt="Website development" width="640" height="480">
+                        </picture>
                     </div>
                 </div>
             </div>
